Fixed z-index of menu

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -235,7 +235,7 @@ body {
 			grid-area: navigation;
 			justify-self: start;
 			grid-auto-flow: column;
-			z-index: 0;
+			z-index: unset;
 			width: unset;
 		}
 	}
